# WindRecorder

./: CMakeLists.txt
src/: WR_config.cxx  WR_config.h  main.cxx
src/io/: serial.cxx  serial.h  serial_anemometers.cxx  serial_anemometers.h  serial_gill.cxx  serial_gill.h
src/ui/: UI.cxx  UI.h  View.cxx  View.h  agv.cxx
src/ui/draw/: DrawScene.cxx  DrawScene.h  draw_arena.cxx  draw_arena.h  materials.h
src/ui/icons/: icons.h
